@@ -56,7 +56,7 @@ namespace std
   template<typename _Tv>
     int
     __convert_from_v(char* __out, 
-		     const int __size __attribute__ ((__unused__)),
+		     const int __size __attribute__((__unused__)),
 		     const char* __fmt,
 		     _Tv __v, const __c_locale&, int __prec = -1)
     {
