@@ -94,30 +94,34 @@ void test01()
   std::ctype_base::mask m02[13];
   const char_type* cc0 = strlit00;
   const char_type* cc1 = NULL;
+  const char_type* cc2 = NULL;
 
   cc0 = strlit00;
-  m01[0] = m00;
-  m01[1] = m00;
-  m01[2] = m00;
+  for (std::size_t i = 0; i < 3; ++i)
+    m01[i] = m00;
   cc1 = gctype.is(cc0, cc0, m01);
   VERIFY( cc1 == strlit00 );
   VERIFY( m01[0] == m00 );
   VERIFY( m01[1] == m00 );
   VERIFY( m01[2] == m00 );
 
-#if 0
+  cc0 = strlit00;
+  for (std::size_t i = 0; i < 3; ++i)
+    m01[i] = m00;
+  cc2 = gctype.is(cc0, cc0 + 3, m01);
+  VERIFY( cc2 == strlit00 + 3);
   VERIFY( m01[0] != m00 );
   VERIFY( m01[1] != m00 );
   VERIFY( m01[2] != m00 );
   VERIFY( gctype.is(m01[0], cc0[0]) );
   VERIFY( gctype.is(m01[1], cc0[1]) );
   VERIFY( gctype.is(m01[2], cc0[2]) );
-#endif
 
   cc0 = strlit01;
+  for (std::size_t i = 0; i < 13; ++i)
+    m02[i] = m00;
   cc1 = gctype.is(cc0, cc0 + 13, m02);
   VERIFY( cc1 == strlit01 + 13);
-#if 0
   VERIFY( m02[6] != m00 );
   VERIFY( m02[7] != m00 );
   VERIFY( m02[8] != m00 );
@@ -131,7 +135,6 @@ void test01()
   VERIFY( gctype.is(m02[6], cc0[6]) );
   VERIFY( gctype.is(m02[7], cc0[7]) );
   VERIFY( gctype.is(m02[8], cc0[8]) );
-#endif
 }
 
 int main() 
